--- a/.github/workflows/test-demo.yml
+++ b/.github/workflows/test-demo.yml
@@ -15,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: pre-check
-      - run: echo "🎉 The job was triggered by a ${{ github.event_name }}."
-      - run: echo "🐧 This job is now running on ${{ runner.os }} "
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+        run: echo "🎉 The job was triggered by a ${{ github.event_name }}."
+        run: echo "🐧 This job is now running on ${{ runner.os }} "
+        run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
       - name: run test
-      - run: echo "start running test, but nothing to run"
+        run: echo "start running test, but nothing to run"
