--- a/.github/workflows/test-demo.yml
+++ b/.github/workflows/test-demo.yml
@@ -8,7 +8,7 @@ on:
         type: string
       secrets:
         token:
-          required: False
+          required: false
           type: string
 
 jobs:
