--- a/.github/workflows/test-demo.yml
+++ b/.github/workflows/test-demo.yml
@@ -6,7 +6,9 @@ on:
       project_name:
         required: true
         type: string
-
+    secrets:
+      token:
+        required: false
 
 jobs:
   install-requirement:
